Vis alle attributter for 1 element. og 1 linje globale variable

--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
 <div class="overlay hidden"></div>
 
 <script src="js/message01.js"></script>
-<script src="js/scrollto.js"></script>
+<script src="js/attributter.js"></script>
 </body>
 </html>
